fix: table alignment

--- a/frontend/src/components/Search/ResultsHeaders.module.css
+++ b/frontend/src/components/Search/ResultsHeaders.module.css
@@ -42,7 +42,12 @@
 }
 
 .oneLine {
-  display: block;
+  display: flex;
+  align-items: center;
+  min-width: 0;
+}
+
+.oneLine span {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
